k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/websocket-services: "socket-service"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"

spec:
  tls:
    - hosts:
        - spotifire.tokyo
        - www.spotifire.tokyo
      secretName: cert-manager-tls
  rules:
    - host: spotifire.tokyo
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000

          - path: /socket.io/
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000

          - path: /login(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000

    - host: www.spotifire.tokyo
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /socket.io/
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
          - path: /api/(.*)
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
          - path: /login(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
